--- a/notebooks/demo_gaussian.ipynb
+++ b/notebooks/demo_gaussian.ipynb
@@ -18,10 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Project root: /Users/t106/github/bocpd\n",
+      "Modules imported successfully!\n"
+     ]
+    }
+   ],
    "source": [
+    "# notebooksディレクトリから実行する場合のパス設定\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# プロジェクトルートをパスに追加（notebooks/から親ディレクトリへ）\n",
+    "project_root = Path.cwd().parent if Path.cwd().name == 'notebooks' else Path.cwd()\n",
+    "if str(project_root) not in sys.path:\n",
+    "    sys.path.insert(0, str(project_root))\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib_fontja\n",
@@ -30,7 +48,10 @@
     "\n",
     "# プロットの設定\n",
     "plt.rcParams['figure.figsize'] = (14, 8)\n",
-    "plt.rcParams['font.size'] = 10"
+    "plt.rcParams['font.size'] = 10\n",
+    "\n",
+    "print(f\"Project root: {project_root}\")\n",
+    "print(\"Modules imported successfully!\")"
    ]
   },
   {
@@ -88,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
